force-app/main/default/objects/Account/fields/Average_Turnover_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Average_Turnover_Minutes__c</fullName>
    <label>Average Turnover Minutes</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>90</defaultValue>
</CustomField>