force-app/main/default/objects/Account/fields/Blackout_Dates__c.field-meta.xml
<CustomField>
    <fullName>Blackout_Dates__c</fullName>
    <label>Blackout Dates</label>
    <type>LongTextArea</type>
    <length>10000</length>
    <description>JSON array of unbookable ISO dates</description>
</CustomField>