force-app/main/default/objects/Account/fields/Cuisine_Type__c.field-meta.xml
<CustomField>
    <fullName>Cuisine_Type__c</fullName>
    <label>Cuisine Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>French</fullName><default>false</default><label>French</label></value>
            <value><fullName>Italian</fullName><default>false</default><label>Italian</label></value>
            <value><fullName>Japanese</fullName><default>false</default><label>Japanese</label></value>
            <value><fullName>Vegan</fullName><default>false</default><label>Vegan</label></value>
            <value><fullName>American</fullName><default>false</default><label>American</label></value>
            <value><fullName>Mexican</fullName><default>false</default><label>Mexican</label></value>
            <value><fullName>Indian</fullName><default>false</default><label>Indian</label></value>
            <value><fullName>Steakhouse</fullName><default>false</default><label>Steakhouse</label></value>
            <value><fullName>Chinese</fullName><default>false</default><label>Chinese</label></value>
            <value><fullName>Salad</fullName><default>false</default><label>Salad</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>