force-app/main/default/objects/Account/fields/Data_Last_Verified__c.field-meta.xml
<CustomField>
    <fullName>Data_Last_Verified__c</fullName>
    <label>Data Last Verified</label>
    <type>DateTime</type>
</CustomField>