force-app/main/default/objects/Account/fields/Family_Friendly__c.field-meta.xml
<CustomField>
    <fullName>Family_Friendly__c</fullName>
    <label>Family Friendly</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>