force-app/main/default/objects/Account/fields/Grace_Period_Mins__c.field-meta.xml
<CustomField>
    <fullName>Grace_Period_Mins__c</fullName>
    <label>Grace Period Minutes</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>15</defaultValue>
</CustomField>