force-app/main/default/objects/Account/fields/Inventory_Buffer_Type__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Buffer_Type__c</fullName>
    <label>Inventory Buffer</label>
    <type>Percent</type>
    <precision>3</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Percentage of inventory held back for walk-ins/VIPs</description>
</CustomField>