force-app/main/default/objects/Account/fields/Last_Menu_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Menu_Update__c</fullName>
    <label>Last Menu Update</label>
    <type>DateTime</type>
</CustomField>