force-app/main/default/objects/Account/fields/Price_Tier__c.field-meta.xml
<CustomField>
    <fullName>Price_Tier__c</fullName>
    <label>Price Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>$</fullName><default>false</default><label>$</label></value>
            <value><fullName>$$</fullName><default>true</default><label>$$</label></value>
            <value><fullName>$$$</fullName><default>false</default><label>$$$</label></value>
            <value><fullName>$$$$</fullName><default>false</default><label>$$$$</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>