force-app/main/default/objects/Account/fields/Primary_Safety_Tag__c.field-meta.xml
<CustomField>
    <fullName>Primary_Safety_Tag__c</fullName>
    <label>Primary Safety Tag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Certified Halal</fullName><default>false</default><label>Certified Halal</label></value>
            <value><fullName>Nut-Free Certified</fullName><default>false</default><label>Nut-Free Certified</label></value>
            <value><fullName>HACCP Compliant</fullName><default>false</default><label>HACCP Compliant</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>