force-app/main/default/objects/Account/fields/Reliability_Reason__c.field-meta.xml
<CustomField>
    <fullName>Reliability_Reason__c</fullName>
    <label>Reliability Reason</label>
    <type>LongTextArea</type>
    <length>5000</length>
</CustomField>