force-app/main/default/objects/Account/fields/Reliability_Score__c.field-meta.xml
<CustomField>
    <fullName>Reliability_Score__c</fullName>
    <label>Reliability Score</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>3</defaultValue>
    <description>1=Legacy/Risk through 5=Absolute Truth/API Sync</description>
</CustomField>