force-app/main/default/objects/Account/fields/Safe_For_Allergies__c.field-meta.xml
<CustomField>
    <fullName>Safe_For_Allergies__c</fullName>
    <label>Safe For Allergies</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Nut-free</fullName><default>false</default><label>Nut-free</label></value>
            <value><fullName>Shellfish-free</fullName><default>false</default><label>Shellfish-free</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>