force-app/main/default/objects/Account/fields/Vibe_Tags__c.field-meta.xml
<CustomField>
    <fullName>Vibe_Tags__c</fullName>
    <label>Vibe Tags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Romantic</fullName><default>false</default><label>Romantic</label></value>
            <value><fullName>Business-Quiet</fullName><default>false</default><label>Business-Quiet</label></value>
            <value><fullName>Family-Friendly</fullName><default>false</default><label>Family-Friendly</label></value>
            <value><fullName>Trendy</fullName><default>false</default><label>Trendy</label></value>
            <value><fullName>Casual</fullName><default>false</default><label>Casual</label></value>
            <value><fullName>Upscale</fullName><default>false</default><label>Upscale</label></value>
            <value><fullName>Outdoor-Dining</fullName><default>false</default><label>Outdoor-Dining</label></value>
            <value><fullName>Live-Music</fullName><default>false</default><label>Live-Music</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>